--- a/src/scss/lib/_pannels.scss
+++ b/src/scss/lib/_pannels.scss
@@ -11,23 +11,24 @@
 	color: white;
 }
 
+////////////////////////////////////////
 // CENTERED PANELS
+
 #intro,
 #homepage,
 #options {
-	padding: $gutter;
+	padding: $gutter; // Bigger padding
 	top: 50%;
 	left: 50%;
 	transform: translate3d(-50%, calc(-100vh - 50%), 0);
 	transition: all 0.5s;
+	text-align: center;
 
-	&.active {
-		transform: translate3d(-50%, -50%, 0);
-	}
-}
+	width: calc(100vw - 3rem);
 
-#intro,
-#homepage {
+	@media (min-width: 20em) { width: 50vw; }
+	@media (min-width: 40em) { width: 35vw; }
+	@media (min-width: 60em) { width: 25vw; }
 
 	> .game-version {
 		@extend .small;
@@ -35,9 +36,13 @@
 	}
 
 	> h1 {
-		font-size: 4rem;
 		margin-top: $gutter;
 		margin-bottom: 0;
+		font-size: 4rem;
+	}
+
+	> h2 {
+		margin-top: $gutter-half;
 	}
 
 	> p.small {
@@ -54,24 +59,19 @@
 	}
 }
 
-#intro,
-#homepage {
-	width: 75vw;
-
-	@media (min-width: 20em) { width: 50vw; }
-	@media (min-width: 40em) { width: 35vw; }
-	@media (min-width: 60em) { width: 25vw; }
+// Active states
+.active-intro #intro,
+.active-homepage #homepage,
+.active-options #options {
+	transform: translate3d(-50%, -50%, 0);
 }
 
-#options {
-	text-align: center;
+////////////////////////////////////////
+// TOP PANELS
 
-	> h2 {
-		margin-top: $gutter-half;
-	}
-}
+$topbar-height: 3.9rem; // TODO better, magic value
 
-// TOP PANEL
+// TOPBAR
 
 #topbar {
 	top: 0;
@@ -83,7 +83,7 @@
 	transform: translate3d(0, -100%, 0);
 	transition: transform 0.25s;
 
-	&.active {
+	.active-topbar & {
 		transform: translate3d(0, 0, 0);
 	}
 }
@@ -100,18 +100,97 @@
 	}
 }
 
+// MINIMAP PANEL
+
+#minimap {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 25vw;
+	height: 25vw;
+	// background-color: rgba(255,0,0,0.5);
+	transform: translate3d(-100%, 0, 0);
+	transition: all 0.25s;
+
+	.active-topbar & {
+		transform: translate3d(-100%, $topbar-height, 0);
+	}
+	.active-minimap & {
+		transform: translate3d(0, 0, 0);
+	}
+	.active-minimap.active-topbar & {
+		transform: translate3d(0, $topbar-height, 0);
+	}
+}
+
+#canvas2d {
+	display: block;
+}
+
+// GAME MENU PANEL
+
+#game-menu {
+	top: 0;
+	right: 0;
+	padding: 0.5rem;
+	padding-bottom: 0;
+	color: white;
+	transform: translate3x(100%, 0, 0);
+	transition: all 0.25s;
+
+	.active-topbar & {
+		transform: translate3d(100%, $topbar-height, 0);
+	}
+	.active-game-menu & {
+		transform: translate3d(0, 0, 0);
+	}
+	.active-game-menu.active-topbar & {
+		transform: translate3d(0, $topbar-height, 0);
+	}
+
+	button {
+		width: 100%;
+		margin-bottom: 0.5rem;
+		text-align: left;
+		border-width: 0 !important;
+		
+		&.game-menu-item--with-value {
+			display: flex;
+			justify-content: space-between;
+
+			> span {
+				margin-left: 1rem;
+			}
+		}
+
+		&.game-menu-item--disabled {
+			opacity: 0.5;
+		}
+	}
+}
+
 // INFOS PANEL
 
 #infos {
 	// bottom: 0;
-	top: $topbar-height;
+	top: 0;
 	right: 0;
 	min-width: 25vw;
-	transform: translateX(100%);
+	transform: translate3d(100%, 0, 0);
 	transition: all .25s;
 
+	.active-topbar & {
+		transform: translate3d(100%, $topbar-height, 0);
+	}
 	.active-infos & {
-		transform: translateX(0);
+		transform: translate3d(0, 0, 0);
+	}
+	.active-infos.active-topbar & {
+		transform: translate3d(0, $topbar-height, 0);
+	}
+	// Special rule to hide infos when game menu is shown
+	.active-game-menu.active-infos & {
+		transform: translate3d(100%, $topbar-height, 0);
 	}
 }
 
@@ -129,6 +208,9 @@
 .infos-item__value {
 	text-align: right;
 }
+
+////////////////////////////////////////
+// BOTTOM PANELS
 
 // GAME CONFIGURATION PANEL
 
